--- a/css/Style.css
+++ b/css/Style.css
@@ -209,3 +209,12 @@ select{
     width: 99%;
     height: 100px;
 }
+
+/**/
+
+.error{
+    margin-bottom: 5px;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #ff9a9a;
+}
