--- a/css/Style.scss
+++ b/css/Style.scss
@@ -128,7 +128,7 @@ img{
     padding: 30px 0;
     margin: 50px 0 0;
     color: #626262;
-    background-color: #f8f8f8;
+    background-color: #e7e7e7;
     font-size: 14px;
     text-align: center;
 }
